try.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: hello 
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hello
  replicas: 2  
  template: 
    metadata: 
      name: hello
      labels:
        app: hello
    spec:
      containers: 
        - name: helloapplication
          image: mdedika1/hello:1  
          ports: 
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hellosvc
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32100
