ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: springapp.tresortech.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: springapp
            port:
              number: 80
  - host: app.tresortech.net
    http:
      paths:
      - pathType: Prefix
        path: /maven-web-app
        backend:
          service:
            name: appsvc
            port:
              number: 80
  - host: java.tresortech.net
    http:
      paths:
      - pathType: Prefix
        path: /java-web-app
        backend:
          service:
            name: javasvc
            port:
              number: 80
  - host: tesla.tresortech.net
    http:
      paths:
      - pathType: Prefix
        path: /tesla
        backend:
          service:
            name: teslasvc
            port:
              number: 80
